feat: update/delete methods & auth fix
