# internal/server/server.go
@@ -13,6 +13,7 @@ import (
 type Handlers struct {
 	CourseHandler *handler.CourseHandler
 	ModuleHandler *handler.ModuleHandler
+	UserHandler   *handler.UserHandler
 	AuthHandler   *handler.AuthHandler
 }
 
@@ -27,6 +28,10 @@ func Start(handlers *Handlers) {
 			handlers.CourseHandler.Read(w, r)
 		case http.MethodPost:
 			handlers.CourseHandler.Create(w, r)
+		case http.MethodPut:
+			handlers.CourseHandler.Update(w, r)
+		case http.MethodDelete:
+			handlers.CourseHandler.Delete(w, r)
 		}
 	})
 
@@ -36,6 +41,23 @@ func Start(handlers *Handlers) {
 			handlers.ModuleHandler.Read(w, r)
 		case http.MethodPost:
 			handlers.ModuleHandler.Create(w, r)
+		case http.MethodPut:
+			handlers.ModuleHandler.Update(w, r)
+		case http.MethodDelete:
+			handlers.ModuleHandler.Delete(w, r)
+		}
+	})
+
+	mux.HandleFunc("/user", func(w http.ResponseWriter, r *http.Request) {
+		switch r.Method {
+		case http.MethodGet:
+			handlers.UserHandler.Read(w, r)
+		case http.MethodPost:
+			handlers.UserHandler.Create(w, r)
+		case http.MethodPut:
+			handlers.UserHandler.Update(w, r)
+		case http.MethodDelete:
+			handlers.UserHandler.Delete(w, r)
 		}
 	})
 
@@ -48,12 +70,6 @@ func Start(handlers *Handlers) {
 	mux.HandleFunc("/register", func(w http.ResponseWriter, r *http.Request) {
 		if r.Method == http.MethodPost {
 			handlers.AuthHandler.Register(w, r)
-		}
-	})
-
-	mux.HandleFunc("/logout", func(w http.ResponseWriter, r *http.Request) {
-		if r.Method == http.MethodPost {
-			handlers.AuthHandler.Logout(w, r)
 		}
 	})
 
